--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,7 @@ import '../styles/global.css'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro';
 
-const pageTitle = "home"
+const pageTitle = "blog"
 ---
 
 <html lang="en">
@@ -15,10 +15,19 @@ const pageTitle = "home"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Header />
+ 
+    <Header />
 		<h1>{pageTitle}</h1>
-		<Footer />
-		<script>
+    <h2>blog</h2>
+    <p>blog</p>
+    <p>bloggggg</p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
+    <Footer />
+    <script>
 			import "../scripts/menu.js"
 		</script>
 	</body>
